--- a/index.html
+++ b/index.html
@@ -72,6 +72,55 @@
             
 
         </section>
+        <section id="How it works">
+            <iframe src="https://www.youtube.com/results?search_query=fire+on+fire" frameborder="0" id="video" height=315 allowfullscreen></iframe>
+
+        </section>
+        <section>
+            <div class="product" id="tenor">
+                <div class="level">Tenor Trombone</div>
+                <h2>$600</h2>
+                <ol>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem Ipsum.</li>
+                    <li>Lorem Ipsum dolor.</li>
+                    <li>Lorem Ipsum.</li>
+                </ol>
+                <button class="btn">SELECT</button>
+            </div>
+            <div class="product" id="tenor">
+                <div class="level">Bass Trombone</div>
+                <h2>$900</h2>
+                <ol>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem Ipsum.</li>
+                    <li>Lorem Ipsum dolor.</li>
+                    <li>Lorem Ipsum.</li>
+                </ol>
+                <button class="btn">SELECT</button>
+            </div>
+            <div class="product" id="tenor">
+                <div class="level">Valve Trombone</div>
+                <h2>$1200</h2>
+                <ol>
+                    <li>Lorem ipsum.</li>
+                    <li>Lorem Ipsum.</li>
+                    <li>Lorem Ipsum dolor.</li>
+                    <li>Lorem Ipsum.</li>
+                </ol>
+                <button class="btn">SELECT</button>
+            </div>
+        </section>
+        <footer>
+            <ul>
+                <li><a href="Privacy">Privacy</a></li>
+                <li><a href="Terms">Terms</a></li>
+                <li><a href="Contact">Contact</a></li>
+            </ul>
+            <span>Copyright 2016, original trombone</span>
+
+        </footer>
+
     </div>
 </body>
 </html>
