--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sy">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>product landing Page</title>
-    <head id="header">Handcrafted, home-made masterpieces
-        <header></header>
+    <head id="header">Original templates
+        <header>
         <img src="./" alt="microverse" id="header-img">
         <nav id="nav-bar">
             <ul>
@@ -27,14 +28,14 @@
     
     </div>
     <section id="hero">
-        <h2>Handcrafted, home-made masterpieces</h2>
+        <h2 class="info">Handcrafted, home-made masterpieces</h2>
         <form >
             <input
              name="Email"
              id="email"
              type="email"
              placeholder="enter your email"
-             required/>
+             required/> <br>
              <input id="submit" type="submit" value="get started" class="btn"/>
 
         </form>
@@ -72,7 +73,7 @@
             
 
         </section>
-        <section id="How it works">
+        <section id="How it works" class="how">
             <iframe src="https://www.youtube.com/results?search_query=fire+on+fire" frameborder="0" id="video" height=315 allowfullscreen></iframe>
 
         </section>
@@ -111,7 +112,7 @@
                 <button class="btn">SELECT</button>
             </div>
         </section>
-        <footer>
+        <footer class="end">
             <ul>
                 <li><a href="Privacy">Privacy</a></li>
                 <li><a href="Terms">Terms</a></li>
